Cursor no longer following out of bounds

--- a/src/css/Card.css
+++ b/src/css/Card.css
@@ -1,8 +1,7 @@
 .card {
     display: flex;
     flex-direction: column;
-    max-width: 25%;
-    min-width: 300px;
+    width: 25%;
     min-height: 350px;
     border-radius: 15px;
     /* border: 2px solid #FFF; */
