--- a/src/css/CardScreen.css
+++ b/src/css/CardScreen.css
@@ -4,6 +4,6 @@
     flex-wrap: wrap;
     width: 100%;
     flex-direction: row;
-    justify-content: space-around;
-    gap: 20px;
+    justify-content: space-evenly;
+    gap: 50px;
 }
