--- a/src/css/TopBar.css
+++ b/src/css/TopBar.css
@@ -6,6 +6,7 @@
 .menu-icon {
     width: 52px;
     aspect-ratio: 1 / 1;
+    overflow-y: hidden;
 }
 
 #menu-icon svg {
